web115/styles/default.css
body {
    font-family: monospace;
    background-color: #e5c293;
    color: #393E41;
    text-align: center;
    margin: 0 auto;
    max-width: 65em;
    font-size: 1.2em;
}

h1 {
    font-size: 2.3em;
}

ul {
    padding-left: 20em;
    padding-right: 15em;
}

a:link {
    color: #B94527;
    text-decoration: none;
}

a:visited {
    color: #795548;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
    text-decoration-color: #393E41;
}

nav.menu {
    font-size: 1.1em;
}

figcaption.waterfallImg {
    font-style: italic;
    font-size: .9em;
}

